# fiitap

./: .gitignore  README.md  full_install.sh  set_keep_alive.sh
PacketConverter/: .gitignore  CMakeLists.txt  LICENSE  README.md  board_reset.sh  config.json  install.sh  packet_converter.service  rega.json  seta.json  start.sh
PacketConverter/inc/: ConcentratorController.h  ConnectionController.h  DevicesTable.h  DiffieHellman.h  Encryption.h  MainApp.h  Message.h  MessageConverter.h  config.h
PacketConverter/jsons/: keys.json  rega.json  rxl.json  seta.json  txl.json
PacketConverter/src/: ConcentratorController.cpp  ConnectionController.cpp  DevicesTable.cpp  DiffieHellman.cpp  Encryption.cpp  MainApp.cpp  Message.cpp  MessageConverter.cpp
